# opengl_renderer

./: CMakeLists.txt  compile_flags.txt
graphics/shaders/: obj.vert
include/game/: Apple.hpp  GameObject.hpp  World.hpp
include/glad/: glad.h
include/render/: Camera.hpp  Renderer.hpp  ResourceManager.hpp  Shader.hpp  Texture2D.hpp
include/render/shapes/: Line.hpp
libs/glad/src/: glad.c
res/shaders/: apple.frag  default.vert  experimental.frag  experimental.vert  lightning.frag  lightning.vert  obj.frag  obj.vert
src/: main.cpp
src/game/: Apple.cpp  GameObject.cpp  World.cpp
src/render/: Camera.cpp  Renderer.cpp  ResourceManager.cpp  Shader.cpp  Texture2D.cpp
src/render/shapes/: Line.cpp
